Fix bug : 357 	Replace "Download Sektch File" with "Download Sketch File" in ALL pages

--- a/src/assets/documents/components/dialog.html
+++ b/src/assets/documents/components/dialog.html
@@ -235,8 +235,7 @@
       <span header-link="component_location_for_designers"></span>Component
       Location for Designers</span>
   </div>
-  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download
-    Sektch File</a>
+  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sketch File</a>
 
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path
