fix bug : 365 incorrect example label, update to "Configurable slider"

--- a/src/assets/documents/components/slider.html
+++ b/src/assets/documents/components/slider.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="doc-title-4 mb-16">
-      Slider with custom thumb label formatting
+      Configurable slider
     </div>
     <div class="doc-desc-2 mb-16">
       Use this configuration below to customize a slider that fit your needs
