fix bug : 368 – please move confirgurable option out of example container – incorrect form field design
369
– paginator should align center
– data should algin left the paginator

--- a/src/assets/examples/paginator-configurable/paginator-configurable.component.css
+++ b/src/assets/examples/paginator-configurable/paginator-configurable.component.css
@@ -3,5 +3,14 @@ mat-form-field {
 }
 .example-wrapper {
     white-space: normal;
-    text-align: left;
+    width: 580px;
+    margin: 0 auto;
+}
+.example-paginator-data {
+  text-align: left;
+}
+
+.example-paginator-instance {
+  width: 396px;
+  text-align: left;
 }
